--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background-color: cadetblue;
+  background-color: orchid;
 }
 
 .main-wrapper{
@@ -18,7 +18,6 @@ body{
 .container{
   width: 600px;
   height: 600px;
-  background-color: blueviolet;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
@@ -31,4 +30,9 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+
+.active{
+  background-color: lightskyblue;
 }
